<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userNameET_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"/>
    <EditText
        android:id="@+id/passwordET_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passHint"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_gravity="center"/>



</LinearLayout>